--- a/views/index.html
+++ b/views/index.html
@@ -7,8 +7,9 @@
     <script src="app.js"></script>
   </head>
   <body>
+    <h1>Number Game</h1>
     <h2>Pick a Number!</h2>
-    <p id="high-low-correct"></p>
+    <p id="high-low-correct">(Results here soon!)</p>
     <form id="guess-number-form">
       <input id="guess-num" name="number" placeholder="guess a number" type="text" />
       <input type="submit" />
@@ -18,5 +19,7 @@
       <input id="new-num" name="number" placeholder="enter new target number" type="text" />
       <input type="submit" />
     </form>
+    <hr>
+    <a href='art-gallery/'>View the Art Gallery</a>
   </body>
 </html>
